pihole/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole
          resources:
            requests:
              memory: "110Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: 2
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-pvc
