pihole/values/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
  annotations:
    metallb.io/address-pool: pool-local-dns
    metallb.universe.tf/loadBalancerIPs: 192.168.0.3
spec:
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
